--- a/app/src/main/res/layout/characters_list_fragment.xml
+++ b/app/src/main/res/layout/characters_list_fragment.xml
@@ -8,13 +8,10 @@
             type="com.example.rickandmortypagingtestmvvmapp.ui.home.charactersList.CharactersListPageViewState" />
 
     </data>
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewCharacterList"
@@ -22,19 +19,26 @@
             android:layout_height="wrap_content"
             android:visibility="@{viewState.isContentVisible()}"/>
 
+
+
             <ProgressBar
+                android:id="@+id/progressBar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:visibility="@{viewState.isLoadingVisible()}"
+                android:layout_gravity="center"
+
                 />
 
             <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/errorMessage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="16dp"
                 android:orientation="vertical"
-                android:visibility="@{viewState.isErrorVisible()}">
+                android:visibility="@{viewState.isErrorVisible()}"
+                >
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:layout_width="wrap_content"
@@ -55,8 +59,6 @@
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
+        </FrameLayout>
 
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
-    </ScrollView>
 </layout>
