--- a/app/src/main/res/layout/item_character_recycler_view.xml
+++ b/app/src/main/res/layout/item_character_recycler_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     
     <data>
@@ -18,6 +19,7 @@
             android:id="@+id/imageViewCharacterImage"
             android:layout_width="75dp"
             android:layout_height="75dp"
+            app:civ_border_width="2dp"
             imageUrl="@{character.image}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -47,5 +49,48 @@
             android:text="@{character.species}"
             app:layout_constraintStart_toEndOf="@+id/imageViewCharacterImage"
             app:layout_constraintTop_toBottomOf="@+id/textViewCharacterName" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="gone"
+            />
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/errorMessage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="vertical"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center_horizontal"
+                android:text="@string/fetch_error"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonTryAgain"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="8dp"
+                android:text="@string/try_again" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
